--- a/BehTreeDesign/BehTreeDesign.uproject
+++ b/BehTreeDesign/BehTreeDesign.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "BehTreeDesign",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"AIModule"
+			]
 		}
 	]
 }
